--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.pxm filter=lfs diff=lfs merge=lfs -text
 *.svg filter=lfs diff=lfs merge=lfs -text
+*.xcf filter=lfs diff=lfs merge=lfs -text
+*.eps filter=lfs diff=lfs merge=lfs -text
