JG/CES #1 is now authorised; in-progress generic flyer. `create_index.py` now has command-line flags!

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.svg filter=lfs diff=lfs merge=lfs -text
 *.xcf filter=lfs diff=lfs merge=lfs -text
 *.eps filter=lfs diff=lfs merge=lfs -text
+*.sla filter=lfs diff=lfs merge-lfs -text
