Seriously ironed out the WSGI configuration

--- a/wsgi/ppaugraphics.ini
+++ b/wsgi/ppaugraphics.ini
@@ -1,13 +1,16 @@
 [uwsgi]
-module = ppaugraphics:application
+wsgi-file = /etc/ppaugraphics/ppaugraphics.py
 
+module = ppaugraphics:application
 master = true
 processes = 5
 
 logto = /tmp/uwsgi_ppaugraphics.log
 
-socket = ppaugraphics.sock
+socket = /run/uwsgi/ppaugraphics.sock
 chmod-socket = 660
 vacuum = true
 
 die-on-term = true
+uid = www-data
+gid = www-data
