ensure zombies are reaped

--- a/wsgi/ppaugraphics.ini
+++ b/wsgi/ppaugraphics.ini
@@ -2,8 +2,10 @@
 wsgi-file = /etc/ppaugraphics/ppaugraphics.py
 
 module = ppaugraphics:application
+
 master = true
 processes = 5
+reaper = true
 
 logto = /tmp/uwsgi_ppaugraphics.log
 
