add JS validator and fix up caching

--- a/wsgi/nginx.conf
+++ b/wsgi/nginx.conf
@@ -24,7 +24,7 @@ server {
 
 	server_name SITE_NAME.TLD;
 
-    ## sample SSL cert config for Let's Encrypt
+    ## sample SSL cert config with Let's Encrypt
 #	ssl_certificate /etc/letsencrypt/live/SITE_NAME.tld/fullchain.pem; # managed by Certbot
 #	ssl_certificate_key /etc/letsencrypt/live/SITE_NAME.tld/privkey.pem; # managed by Certbot
 
@@ -40,9 +40,12 @@ server {
     # gzip-compression is on by default these days, but perhaps not for SVG
     gzip_types image/svg+xml;
     
-    # if there's a rendering bug, make sure it doesn't stick around once fixed
-    expires 1d;
-    
+    # Have some caching, but if there's an auth update or a rendering bug, move on fairly quick
+    location ~* \.(?:png|jpg|svg)$ {
+        expires 1w;
+        add_header Cache-Control "public";
+    }
+        
     ## if you're not running this on its own subdomain, you probably want
 #    location /ppau-graphics/wsgi {
     ## instead of the line below.
