add sendfile support for static files and make the skip prefix configurable in the indexer

--- a/wsgi/nginx.conf
+++ b/wsgi/nginx.conf
@@ -40,10 +40,14 @@ server {
     # gzip-compression is on by default these days, but perhaps not for SVG
     gzip_types image/svg+xml;
     
-    # Have some caching, but if there's an auth update or a rendering bug, move on fairly quick
     location ~* \.(?:png|jpg|svg)$ {
+        # Have some caching, but if there's an auth update or a rendering bug, 
+        # move on to the replaced one fairly quick
         expires 1w;
         add_header Cache-Control "public";
+        # optimise static file serving even further!
+        sendfile           on;
+        sendfile_max_chunk 1m;
     }
         
     ## if you're not running this on its own subdomain, you probably want
