Swap to venv in /opt/

--- a/wsgi/ppaugraphics.service.conf
+++ b/wsgi/ppaugraphics.service.conf
@@ -6,8 +6,9 @@ After=network.target
 User=www-data
 Group=www-data
 RuntimeDirectory=uwsgi
-WorkingDirectory=/etc/ppaugraphics
-ExecStart=uwsgi --ini ppaugraphics.ini
+WorkingDirectory=/opt/ppaugraphics
+Environment="PATH=/opt/ppaugraphics/env/bin"
+ExecStart=/opt/ppaugraphics/env/bin/uwsgi --ini ppaugraphics.ini
 
 [Install]
 WantedBy=multi-user.target
